[package]
name = "residua-cesu8"
version = "2.0.0"

authors = ["Sean C. Roach <me@seancroach.dev>"]
categories = ["encoding", "no-std"]
edition = "2021"
description = "A library for converting between CESU-8 and UTF-8."
keywords = ["utf8", "cesu8", "encode", "decode", "no_std"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/residua/cesu8"

[lib]
name = "cesu8"

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg"]
